--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,6 +113,9 @@ $orange: #fab702;
         align-items: center;
         .menu {
             margin-top: 20px;
+            .menu__btn {
+                display: none;
+            }
             .menu__list {
                 display: flex;
                 justify-content: space-between;
@@ -120,14 +123,18 @@ $orange: #fab702;
                     cursor: pointer;
                     .menu__list-link {
                         padding: 10px 15px;
-                        font-size: 14px;
+                        font-size: 20px;
                         font-family: "Roboto", sans-serif;
                         color: #3b404f;
                         line-height: 1.2;
                     }
                     .icon {
+                        font-size: 20px;
                         i {
                             color: #3b404f;
+                        }
+                        i:hover {
+                            color: $orange;
                         }
                     }
                 }
@@ -136,23 +143,103 @@ $orange: #fab702;
                         color: $orange;
                     }
                 }
+                .search__form {
+                    display: none;
+                    border: 4px solid $orange;
+                    box-shadow: $orange;
+                    position: absolute;
+                    z-index: 1;
+                    background-color: #f8f8f8;
+                    .search {
+                        width: 250px;
+                        height: 50px;
+                        font-size: 30px;
+                        background-color: #f8f8f8;
+                    }
+                }
+                .search__form--active {
+                    display: block;
+                }
+            }
+        }
+    }
+    @media screen and (max-width: 600px) {
+        .header__inner {
+            .menu {
+                z-index: 1;
+
+                .menu__list {
+                    display: block;
+                    position: absolute;
+                    top: 100px;
+                    left: 0;
+                    background-color: $orange;
+                    right: 0px;
+                    text-align: center;
+                    padding: 20px 0;
+                    transform: translateY(-500px);
+                    transition: all 0.5s;
+                    .menu__item:hover {
+                        .menu__list-link {
+                            color: white;
+                        }
+                    }
+                    .icon {
+                        display: none;
+                    }
+                }
+                .menu__list.menu__list--active {
+                    transform: translateY(0);
+                }
+                .menu__list-link {
+                    padding: 20px 0;
+                    display: block;
+                }
+                .menu__btn {
+                    display: block;
+                    cursor: pointer;
+                    width: 35px;
+                    height: 24px;
+                    border-bottom: 2px solid $orange;
+                    border-top: 2px solid $orange;
+                    background-color: transparent;
+                    position: relative;
+                }
+                .menu__btn::before {
+                    content: "";
+                    position: absolute;
+                    background-color: $orange;
+                    width: 35px;
+                    height: 2px;
+                    left: 0;
+                    top: 9px;
+                }
             }
         }
     }
 }
 .top {
-    background-color: #a7a9fe;
-    max-height: 800px;
+    max-width: 1920px;
+    margin: 0 auto;
+    overflow: hidden;
     .top__slider {
         .top__slider-item {
             position: relative;
+            //height: 700px;
+            padding: 0 0 12% 0;
             .top__slider-image {
                 width: 100%;
+                height: 100%;
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
             }
             .top__slider-title {
                 position: absolute;
-                top: 20%;
-                width: 60%;
+                top: 28%;
+                max-width: 40%;
                 font-size: 64px;
                 font-family: "Montserrat", sans-serif;
                 color: rgb(255, 255, 255);
@@ -162,28 +249,56 @@ $orange: #fab702;
             }
             .top__slider-text {
                 position: absolute;
-                top: 40%;
-                width: 60%;
-                font-size: 14px;
+                top: 50%;
+                max-width: 40%;
+                font-size: 20px;
                 font-family: "Roboto", sans-serif;
                 color: rgb(255, 255, 255);
                 line-height: 1.714;
                 text-align: left;
+                padding-top: 30px;
             }
             .top__btn-link {
                 display: block;
                 position: absolute;
-                top: 50%;
+                top: 75%;
                 color: white;
                 background-color: $orange;
                 padding: 20px 50px;
+                font-size: 20px;
             }
+        }
+        .slick-arrow {
+            position: absolute;
+            top: 50%; // выравнивание по вертикали
+            margin: -15px 0 0 0; // корректировка  вертикального выравнивания
+            z-index: 2; // стрелки сверху картинок
+            font-size: 0; // убираем надпись на дефолтной стрелке
+            width: 40px; // ширина стрелки
+            height: 40px; // высота стрелки
+        }
+        .slick-prev {
+            list-style: none;
+            text-align: center;
+            transform: rotate(-0.5turn);
+
+            background: url("../img/iconmonstr-arrow-right-thin.svg") 0 0 / 100% no-repeat;
+        }
+        .slick-next {
+            list-style: none;
+            text-align: center;
+            right: 0;
+            // transform: rotate(-0.25turn);
+
+            background: url("../img/iconmonstr-arrow-right-thin.svg") 0 0 / 100% no-repeat;
         }
     }
 }
 
 .contact {
     background-color: $orange;
+    max-width: 1920px;
+    margin: 0 auto;
     .contact__inner {
         display: flex;
         justify-content: space-between;
@@ -204,6 +319,7 @@ $orange: #fab702;
         .contacts__btn-link {
             padding: 20px 40px;
             background-color: white;
+            font-size: 20px;
             color: $orange;
         }
     }
@@ -211,7 +327,7 @@ $orange: #fab702;
 
 .features {
     .features__content {
-        margin: 0 auto;
+        // margin: 0 auto;
         text-align: center;
         padding: 185px 250px 120px;
         .features__title {
@@ -224,7 +340,7 @@ $orange: #fab702;
             padding-bottom: 40px;
         }
         .features__text {
-            font-size: 14px;
+            font-size: 20px;
             font-family: "Roboto", sans-serif;
             color: #6d73a0;
             line-height: 1.714;
@@ -258,7 +374,7 @@ $orange: #fab702;
                 }
                 .features__courses-text {
                     padding-top: 35px;
-                    font-size: 14px;
+                    font-size: 20px;
                     font-family: "Roboto", sans-serif;
                     color: #6d73a0;
                     line-height: 1.714;
@@ -295,12 +411,21 @@ $orange: #fab702;
 
 .testimonial {
     display: flex;
-    margin-top: 130px;
-    max-width: 100%;
-    height: 715px;
+    max-width: 1920px;
+    margin: 130px auto 0px;
     .testimonial__video {
-        width: 50%;
         background-color: $orange;
+        width: 50%;
+        position: relative;
+        padding: 0 0 12% 0;
+        .testimonial__video-img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+        }
     }
     .testimonial__content {
         width: 50%;
@@ -308,7 +433,7 @@ $orange: #fab702;
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding-left: 55px;
+        padding: 140px 0px 140px 55px;
         .testimonial__content-item {
             padding: 30px 0px;
             display: flex;
@@ -325,7 +450,7 @@ $orange: #fab702;
                     padding-bottom: 25px;
                 }
                 .testimonial__content-par {
-                    font-size: 14px;
+                    font-size: 20px;
                     font-family: "Roboto", sans-serif;
                     color: rgb(109, 115, 150);
                     line-height: 1.714;
@@ -339,6 +464,8 @@ $orange: #fab702;
 
 .portfolio {
     margin-top: 130px;
+    // margin: 130px auto 0;
+    //max-width: 1950px;
     .portfolio__content {
         margin-bottom: 95px;
         .portfolio__title {
@@ -354,7 +481,7 @@ $orange: #fab702;
         .portfolio__text {
             display: block;
             margin: 0 auto;
-            font-size: 14px;
+            font-size: 20px;
             font-family: "Roboto", sans-serif;
             color: rgb(109, 115, 150);
             line-height: 1.714;
@@ -363,6 +490,7 @@ $orange: #fab702;
         }
     }
     .tabs {
+        // margin: 0 auto;
         .tabs__items {
             display: flex;
             justify-content: center;
@@ -377,60 +505,77 @@ $orange: #fab702;
                 text-decoration: none;
                 color: black;
                 margin: 20px;
-                font-size: 20px;
+                font-size: 24px;
             }
         }
         #tabs_container {
-            margin-top: 60px;
+            //margin-top: 60px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             max-width: 1920px;
-            margin: 0 auto;
-            .tabs__works-item {
-                //background-color: $orange;
-                width: 638px;
-                height: 390px;
-                position: relative;
-                margin: 1px auto;
-                .tabs__works-img {
-                    width: 100%;
-                    height: 100%;
-                    margin: 0px 0px;
-                    transition: all 0.5s;
-                }
-                .tabs__works-title {
-                    margin-top: -110px;
-                    height: 110px;
-                    align-items: center;
-                    display: flex;
-                    justify-content: space-between;
-                    background-color: white;
-                    opacity: 0;
-                    transition: all 0.5s;
-                    .tabs__works-head {
-                        // width: 60px;
-                        font-size: 22px;
-                        padding-bottom: 20px;
-                        margin-left: 40px;
-                        position: relative;
-                    }
-                    .tabs__works-head::before {
-                        content: "";
+            margin: 60px auto 0;
+            .tabs__block {
+                margin: 2px auto;
+                width: calc(100% / 3);
+                // height: 390px;
+                padding: 2px 2px;
+                .tabs__works-item {
+                    //background-color: $orange;
+                    // width: 638px;
+                    // height: 390px;
+                    position: relative;
+                    padding: 0 0 58% 0;
+                    overflow: hidden;
+                    // margin: 1px auto;
+                    .tabs__works-img {
                         position: absolute;
-                        width: 60px;
-                        padding-top: 45px;
-                        border-bottom: 2px solid #6d7396;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        top: 0;
+                        left: 0;
+                        margin: 0px 0px;
+                        z-index: -1;
+                        transition: all 0.5s;
                     }
-                    .tabs__works-icons {
-                        margin-right: 10px;
-                        .icon {
-                            padding: 14px 17px;
-                            background-color: $orange;
-                            margin-left: 10px;
-                            i {
-                                color: white;
+                    .tabs__works-title {
+                        // margin-top: -110px;
+                        position: absolute;
+
+                        bottom: 0;
+                        height: 110px;
+                        width: 100%;
+                        align-items: center;
+                        display: flex;
+                        justify-content: space-between;
+                        background-color: white;
+                        opacity: 0;
+                        transition: all 0.5s;
+                        .tabs__works-head {
+                            // width: 60px;
+                            font-size: 22px;
+                            padding-bottom: 20px;
+                            margin-left: 40px;
+                            position: relative;
+                        }
+                        .tabs__works-head::before {
+                            content: "";
+                            position: absolute;
+                            width: 60px;
+                            padding-top: 45px;
+                            border-bottom: 2px solid #6d7396;
+                        }
+                        .tabs__works-icons {
+                            margin-right: 10px;
+                            .icon {
+                                padding: 14px 17px;
+                                background-color: $orange;
+                                margin-left: 10px;
+                                i {
+                                    color: white;
+                                }
                             }
                         }
                     }
@@ -443,7 +588,7 @@ $orange: #fab702;
                 .tabs__works-img {
                     width: 99%;
                     height: 98%;
-                    margin: 4px 4px;
+                    margin: 2px 2px;
                 }
             }
             .slick-dots {
@@ -509,7 +654,8 @@ $orange: #fab702;
 }
 
 .feedback {
-    margin-top: 125px;
+    max-width: 1920px;
+    margin: 125px auto 0;
     .feedback__content {
         .feedback__title {
             font-size: 44px;
@@ -523,7 +669,7 @@ $orange: #fab702;
         .feedback__text {
             margin: 35px auto 120px;
             max-width: 645px;
-            font-size: 14px;
+            font-size: 20px;
             font-family: "Roboto", sans-serif;
             color: rgb(109, 115, 150);
             line-height: 1.714;
@@ -533,24 +679,29 @@ $orange: #fab702;
     .feedback__slider {
         .feedback__slider-item {
             display: flex;
-            width: 555px;
-            height: 170px;
+            max-width: calc(100% / 2);
+            //width: 555px;
+            height: 220px;
             margin-left: 30px;
+
             .feedback__slider-images {
-                max-width: 135px;
-                max-height: 170px;
+                width: 20%;
+                height: 100%;
+                // max-width: 135px;
+                // max-height: 170px;
+                object-fit: cover;
             }
             .feedback__slider-text {
                 background-color: #f8f8f8;
                 padding: 35px 30px 40px 20px;
-                font-size: 14px;
+                font-size: 20px;
                 font-family: "Roboto", sans-serif;
                 color: rgb(109, 115, 150);
                 line-height: 1.714;
                 span {
                     padding-top: 25px;
                     display: block;
-                    font-size: 11px;
+                    font-size: 14px;
                     font-family: "Montserrat", sans-serif;
                     color: rgb(59, 64, 79);
                     text-transform: uppercase;
@@ -595,6 +746,8 @@ $orange: #fab702;
 .counter {
     background-color: $orange;
     padding: 70px 60px 40px;
+    max-width: 1920px;
+    margin: 0 auto;
     .counter__items {
         display: flex;
         align-items: center;
@@ -619,6 +772,7 @@ $orange: #fab702;
 .information {
     padding: 100px 0px;
     background-color: #f8f8f8;
+    max-width: 1920px;
     margin: 0 auto;
     .information__block {
         background-color: white;
@@ -633,20 +787,21 @@ $orange: #fab702;
         align-items: center;
         justify-content: space-between;
         .information__title {
-            font-size: 20px;
+            font-size: 22px;
             font-family: "Montserrat", sans-serif;
             color: rgb(59, 64, 79);
             line-height: 1.2;
             text-align: left;
             span {
                 color: #6d7396;
-                font-size: 13px;
+                font-size: 15px;
             }
         }
         .information__link {
             padding: 15px 30px;
             background-color: $orange;
             color: white;
+            font-size: 16px;
         }
     }
     .information__block::before {
@@ -673,7 +828,7 @@ $orange: #fab702;
             padding-bottom: 40px;
         }
         .news__text {
-            font-size: 14px;
+            font-size: 20px;
             font-family: "Roboto", sans-serif;
             color: #6d73a0;
             line-height: 1.714;
@@ -706,7 +861,7 @@ $orange: #fab702;
                 }
                 .news__courses-text {
                     padding-top: 35px;
-                    font-size: 14px;
+                    font-size: 20px;
                     font-family: "Roboto", sans-serif;
                     color: #6d73a0;
                     line-height: 1.714;
@@ -715,6 +870,7 @@ $orange: #fab702;
                 .news__courses-link {
                     display: inline-block;
                     margin-top: 30px;
+                    font-size: 20px;
                     color: #6d73a0;
                     transition: all 0.5s;
                     padding-bottom: 5px;
@@ -742,7 +898,7 @@ $orange: #fab702;
         display: flex;
         justify-content: space-between;
         .footer__title {
-            font-size: 14px;
+            font-size: 20px;
             font-family: "Roboto", sans-serif;
             color: rgb(255, 255, 255);
             line-height: 1.2;
@@ -757,7 +913,7 @@ $orange: #fab702;
                 border-bottom: 1px solid rgba(255, 255, 255, 0.1);
                 .footer__list-link {
                     color: white;
-                    font-size: 13px;
+                    font-size: 14px;
                     font-family: "Roboto", sans-serif;
                     //line-height: 1.8;
                 }
@@ -792,7 +948,7 @@ $orange: #fab702;
                 }
                 .footer__news-text {
                     color: white;
-                    font-size: 13px;
+                    font-size: 14px;
                     font-family: "Roboto", sans-serif;
                     line-height: 1.538;
                     text-align: left;
