--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,9 +85,13 @@ h6 {
 $mw: 1145px;
 $orange: #fab702;
 
+body {
+    font-family: "Roboto", sans-serif;
+}
 .container {
     max-width: $mw;
     margin: 0px auto;
+    padding: 0 10px;
 }
 
 .icon {
@@ -106,7 +110,7 @@ $orange: #fab702;
 
 .header {
     margin: 20px 0px 35px 0px;
-    padding: 0px 10px;
+    //padding: 0px 10px;
     .header__inner {
         display: flex;
         justify-content: space-between;
@@ -121,6 +125,7 @@ $orange: #fab702;
                 justify-content: space-between;
                 .menu__item {
                     cursor: pointer;
+                    position: relative;
                     .menu__list-link {
                         padding: 10px 15px;
                         font-size: 20px;
@@ -146,14 +151,15 @@ $orange: #fab702;
                 .search__form {
                     display: none;
                     border: 4px solid $orange;
-                    box-shadow: $orange;
                     position: absolute;
+                    margin-top: 14px;
+                    right: 0;
                     z-index: 1;
                     background-color: #f8f8f8;
                     .search {
                         width: 250px;
-                        height: 50px;
-                        font-size: 30px;
+                        height: 40px;
+                        font-size: 20px;
                         background-color: #f8f8f8;
                     }
                 }
@@ -163,11 +169,10 @@ $orange: #fab702;
             }
         }
     }
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 700px) {
         .header__inner {
             .menu {
                 z-index: 1;
-
                 .menu__list {
                     display: block;
                     position: absolute;
@@ -239,10 +244,10 @@ $orange: #fab702;
             .top__slider-title {
                 position: absolute;
                 top: 28%;
-                max-width: 40%;
+                width: 40%;
                 font-size: 64px;
                 font-family: "Montserrat", sans-serif;
-                color: rgb(255, 255, 255);
+                color: white;
                 text-transform: uppercase;
                 line-height: 1.25;
                 text-align: left;
@@ -250,10 +255,10 @@ $orange: #fab702;
             .top__slider-text {
                 position: absolute;
                 top: 50%;
-                max-width: 40%;
+                width: 40%;
                 font-size: 20px;
                 font-family: "Roboto", sans-serif;
-                color: rgb(255, 255, 255);
+                color: white;
                 line-height: 1.714;
                 text-align: left;
                 padding-top: 30px;
@@ -268,29 +273,33 @@ $orange: #fab702;
                 font-size: 20px;
             }
         }
-        .slick-arrow {
-            position: absolute;
-            top: 50%; // выравнивание по вертикали
-            margin: -15px 0 0 0; // корректировка  вертикального выравнивания
-            z-index: 2; // стрелки сверху картинок
-            font-size: 0; // убираем надпись на дефолтной стрелке
-            width: 40px; // ширина стрелки
-            height: 40px; // высота стрелки
-        }
-        .slick-prev {
-            list-style: none;
-            text-align: center;
-            transform: rotate(-0.5turn);
+    }
 
-            background: url("../img/iconmonstr-arrow-right-thin.svg") 0 0 / 100% no-repeat;
+    @media screen and(max-width: 1600px) {
+        .top__slider {
+            .top__slider-item {
+                .top__slider-title {
+                    top: 20%;
+                    width: 70%;
+                }
+                .top__slider-text {
+                    width: 70%;
+                }
+            }
         }
-        .slick-next {
-            list-style: none;
-            text-align: center;
-            right: 0;
-            // transform: rotate(-0.25turn);
-
-            background: url("../img/iconmonstr-arrow-right-thin.svg") 0 0 / 100% no-repeat;
+    }
+    @media screen and(max-width: 1100px) {
+        .top__slider {
+            .top__slider-item {
+                .top__slider-title {
+                    top: 10%;
+                    width: 100%;
+                }
+                .top__slider-text {
+                    top: 45%;
+                    width: 100%;
+                }
+            }
         }
     }
 }
@@ -517,7 +526,7 @@ $orange: #fab702;
             max-width: 1920px;
             margin: 60px auto 0;
             .tabs__block {
-                margin: 2px auto;
+                margin: 0px auto;
                 width: calc(100% / 3);
                 // height: 390px;
                 padding: 2px 2px;
@@ -543,14 +552,13 @@ $orange: #fab702;
                     .tabs__works-title {
                         // margin-top: -110px;
                         position: absolute;
-
                         bottom: 0;
                         height: 110px;
                         width: 100%;
                         align-items: center;
                         display: flex;
                         justify-content: space-between;
-                        background-color: white;
+                        background-color: rgba(255, 255, 255, 0.8);
                         opacity: 0;
                         transition: all 0.5s;
                         .tabs__works-head {
@@ -583,7 +591,7 @@ $orange: #fab702;
             }
             .tabs__works-item:hover {
                 .tabs__works-title {
-                    opacity: 0.8;
+                    opacity: 1;
                 }
                 .tabs__works-img {
                     width: 99%;
@@ -680,10 +688,8 @@ $orange: #fab702;
         .feedback__slider-item {
             display: flex;
             max-width: calc(100% / 2);
-            //width: 555px;
             height: 220px;
-            margin-left: 30px;
-
+            margin: 0 15px;
             .feedback__slider-images {
                 width: 20%;
                 height: 100%;
@@ -699,7 +705,7 @@ $orange: #fab702;
                 color: rgb(109, 115, 150);
                 line-height: 1.714;
                 span {
-                    padding-top: 25px;
+                    padding-top: 15px;
                     display: block;
                     font-size: 14px;
                     font-family: "Montserrat", sans-serif;
@@ -711,9 +717,7 @@ $orange: #fab702;
                 }
             }
         }
-        .feedback__slider-item:first-child {
-            margin-left: 0;
-        }
+
         .slick-dots {
             list-style: none;
             text-align: center;
@@ -744,27 +748,48 @@ $orange: #fab702;
 }
 
 .counter {
-    background-color: $orange;
     padding: 70px 60px 40px;
     max-width: 1920px;
     margin: 0 auto;
-    .counter__items {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 0 auto;
-        .counter__item {
-            font-size: 13px;
-            font-family: "Roboto", sans-serif;
-            color: rgb(255, 255, 255);
-            text-align: center;
-            text-transform: uppercase;
+    position: relative;
+    .counter__back {
+        // padding: 0 0 10% 0;
+        // height: 220px;
+        overflow: hidden;
+        // position: absolute;
+        .counter__img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            z-index: -1;
         }
-        span {
-            line-height: 1.8;
-            font-family: "Roboto", sans-serif;
-            font-size: 50px;
-            font-weight: 500;
+    }
+    .container {
+        // position: absolute;
+
+        .counter__items {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin: 0 auto;
+
+            .counter__item {
+                font-size: 20px;
+                font-family: "Roboto", sans-serif;
+                color: white;
+                text-align: center;
+                text-transform: uppercase;
+                font-weight: bold;
+            }
+            span {
+                line-height: 1.8;
+                font-family: "Roboto", sans-serif;
+                font-size: 50px;
+                font-weight: 500;
+            }
         }
     }
 }
@@ -845,6 +870,7 @@ $orange: #fab702;
                 width: 100%;
                 height: 240px;
                 margin: 0px auto;
+                object-fit: cover;
                 transition: all 0.5s;
             }
             .news__courses-content {
@@ -945,6 +971,7 @@ $orange: #fab702;
                 .footer__news-img {
                     width: 65px;
                     height: 65px;
+                    object-fit: cover;
                 }
                 .footer__news-text {
                     color: white;
