--- a/scss/style.scss
+++ b/scss/style.scss
@@ -283,10 +283,12 @@ body {
                     top: 20%;
                     width: 70%;
                     font-size: 50px;
+                    font-weight: bold;
                 }
                 .top__slider-text {
                     top: 45%;
                     width: 75%;
+                    font-weight: bold;
                 }
             }
         }
@@ -373,7 +375,8 @@ body {
             font-family: "Roboto", sans-serif;
             color: rgb(255, 255, 255);
             line-height: 1.8;
-            span {
+
+            .second {
                 font-style: italic;
                 color: black;
                 text-decoration: underline;
@@ -396,6 +399,7 @@ body {
     }
     @media screen and(max-width: 1100px) {
         .contact__inner {
+            padding: 30px 0;
             .contact__text {
                 font-size: 25px;
             }
@@ -406,6 +410,7 @@ body {
     }
     @media screen and(max-width: 930px) {
         .contact__inner {
+            padding: 20px 0;
             .contact__text {
                 font-size: 20px;
             }
@@ -417,11 +422,8 @@ body {
     }
     @media screen and(max-width: 700px) {
         .contact__inner {
-            .contact__text {
+            .first {
                 display: none;
-            }
-            .contact__span {
-                display: block;
             }
         }
     }
@@ -453,12 +455,14 @@ body {
     .features__courses {
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
 
         .features__courses-item {
             cursor: pointer;
-            max-width: 360px;
-            margin: 0 auto 10px;
+
+            max-width: calc(100% / 3);
+
+            padding: 0 5px;
 
             .features__courses-image {
                 display: block;
@@ -515,6 +519,13 @@ body {
                 }
             }
         }
+        @media screen and(max-width: 850px) {
+            flex-direction: column;
+            .features__courses-item {
+                margin: 0 auto 20px;
+                max-width: 360px;
+            }
+        }
     }
 }
 
@@ -564,6 +575,7 @@ body {
                     font-family: "Roboto", sans-serif;
                     color: rgb(109, 115, 150);
                     line-height: 1.714;
+                    padding-right: 10px;
                     // text-align: left;
                     //margin-top: 30px;
                 }
@@ -591,6 +603,9 @@ body {
     @media screen and(max-width: 500px) {
         .testimonial__content {
             padding: 50px 0px;
+            .testimonial__content-item {
+                padding: 30px 10px;
+            }
         }
     }
     @media screen and(max-width: 400px) {
@@ -617,6 +632,7 @@ body {
     margin-top: 130px;
     .portfolio__content {
         margin-bottom: 95px;
+        padding: 0 10px;
         .portfolio__title {
             padding-bottom: 40px;
             font-size: 44px;
@@ -681,7 +697,7 @@ body {
             //margin-top: 60px;
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: center;
             max-width: 1920px;
             margin: 60px auto 0;
@@ -843,11 +859,20 @@ body {
             #tabs_container {
                 margin: 0 auto;
                 .tabs__block {
-                    width: 100%;
+                    width: calc((100% / 2) - 4px);
                     margin: 1px auto;
                     .tabs__works-item:hover {
                         margin: 0 auto;
                     }
+                }
+            }
+        }
+    }
+    @media screen and(max-width: 600px) {
+        .tabs {
+            #tabs_container {
+                .tabs__block {
+                    width: 100%;
                 }
             }
         }
@@ -936,10 +961,20 @@ body {
         margin: 75px auto;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
+
+        @media screen and(max-width: 1000px) {
+            max-width: 840px;
+            .feedback__logo-img {
+                margin: 0 auto;
+
+                padding: 0 26px;
+            }
+        }
         @media screen and(max-width: 600px) {
             margin: 10px auto;
+            max-width: 230px;
         }
     }
     @media screen and(max-width: 600px) {
@@ -999,7 +1034,9 @@ body {
 
             .counter__item {
                 margin: 0 auto;
-                width: 210px;
+
+                width: calc(100% / 4);
+                // width: 210px;
                 font-size: 20px;
                 font-family: "Roboto", sans-serif;
                 color: white;
@@ -1012,6 +1049,17 @@ body {
                 font-family: "Roboto", sans-serif;
                 font-size: 50px;
                 font-weight: 500;
+            }
+            @media screen and(max-width: 1000px) {
+                .counter__item {
+                    width: calc(100% / 2);
+                    margin-top: 20px;
+                }
+            }
+            @media screen and(max-width: 600px) {
+                .counter__item {
+                    width: calc(100% / 1);
+                }
             }
         }
     }
@@ -1046,6 +1094,7 @@ body {
             span {
                 color: #6d7396;
                 font-size: 15px;
+                font-family: "Roboto", sans-serif;
             }
         }
         .information__link {
@@ -1096,18 +1145,21 @@ body {
     .news__courses {
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
 
         .news__courses-item {
-            max-width: 360px;
-            margin: 20px auto;
+            // max-width: 360px;
+            max-width: calc(100% / 3);
+            // margin: 0 5px;
+            padding: 0 5px;
+
             .news__courses-image {
-                //display: block;
+                display: block;
                 background-color: $orange;
+                object-fit: cover;
                 width: 100%;
                 height: 240px;
                 margin: 0px auto;
-                object-fit: cover;
                 transition: all 0.5s;
             }
             .news__courses-content {
@@ -1149,12 +1201,20 @@ body {
                 }
             }
         }
+        @media screen and(max-width: 850px) {
+            flex-direction: column;
+            .news__courses-item {
+                margin: 0 auto 20px;
+                max-width: 360px;
+            }
+        }
     }
 }
 
 .footer {
     background-color: #252c3a;
-    padding: 80px 0;
+    padding: 80px 10px;
+    margin: 0 auto;
     .footer__items {
         max-width: 1180px;
         margin: 0 auto;
@@ -1286,7 +1346,7 @@ body {
     @media screen and(max-width: 1150px) {
         .footer__items {
             flex-direction: column;
-            margin-left: 20px;
+            // margin-left: 20px;
             .footer__title::after {
                 content: "";
                 border-bottom: 2px solid $orange;
@@ -1336,6 +1396,17 @@ body {
         }
         .info__list.info__list--active {
             display: block;
+        }
+    }
+}
+
+@media screen and(max-width: 500px) {
+    .content {
+        .title {
+            font-size: 35px;
+        }
+        .text {
+            font-size: 16px;
         }
     }
 }
