--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,8 +242,9 @@ body {
                 z-index: -1;
             }
             .top__slider-title {
+                font-weight: bold;
                 position: absolute;
-                top: 28%;
+                top: 20%;
                 width: 40%;
                 font-size: 64px;
                 font-family: "Montserrat", sans-serif;
@@ -253,6 +254,7 @@ body {
                 text-align: left;
             }
             .top__slider-text {
+                font-weight: bold;
                 position: absolute;
                 top: 50%;
                 width: 40%;
@@ -283,12 +285,13 @@ body {
                     top: 20%;
                     width: 70%;
                     font-size: 50px;
-                    font-weight: bold;
                 }
                 .top__slider-text {
                     top: 45%;
                     width: 75%;
-                    font-weight: bold;
+                }
+                .top__btn-link {
+                    right: 5%;
                 }
             }
         }
@@ -1401,12 +1404,14 @@ body {
 }
 
 @media screen and(max-width: 500px) {
-    .content {
-        .title {
-            font-size: 35px;
-        }
-        .text {
-            font-size: 16px;
+    .container {
+        .content {
+            .title {
+                font-size: 35px;
+            }
+            .text {
+                font-size: 16px;
+            }
         }
     }
 }
