--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1415,3 +1415,67 @@ body {
         }
     }
 }
+
+#callback {
+    background-color: #f8f8f8;
+    max-width: 400px;
+    // max-height: 400px;
+    margin: 0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    .callback__title {
+        font-size: 34px;
+        padding: 20px;
+        text-align: center;
+        color: #f8f8f8;
+        background-color: $orange;
+    }
+    fieldset {
+        margin: 0 auto;
+
+        ol {
+            list-style: none;
+            padding: 10px;
+            li {
+                margin: 0 auto;
+                max-width: 100%;
+                padding-bottom: 10px;
+                label {
+                    font-size: 25px;
+                    margin: 0 auto 10px;
+                    padding-right: 10px;
+                    padding-bottom: 10px;
+                }
+                input:required {
+                    height: 100%;
+                    font-size: 20px;
+                    padding: 0px 5px;
+                    border: 2px solid #f1f1f1;
+                    border-radius: 5px;
+                    overflow: hidden;
+                }
+                textarea {
+                    margin-top: 10px;
+                    font-size: 20px;
+                    padding: 5px;
+                    border: 2px solid #f1f1f1;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    width: 100%;
+                    height: 100px;
+                    resize: none;
+                }
+                .callback__btn {
+                    padding: 15px 30px;
+                    background-color: $orange;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    float: right;
+                    margin-bottom: 10px;
+                    color: #f8f8f8;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+}
