--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1449,7 +1449,8 @@ body {
                 input:required {
                     height: 100%;
                     font-size: 20px;
-                    padding: 0px 5px;
+                    padding: 5px;
+                    margin-top: 5px;
                     border: 2px solid #f1f1f1;
                     border-radius: 5px;
                     overflow: hidden;
